# Zeus

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Zeus.sln
libraries/: CMakeLists.txt
root/: CMakeLists.txt  CMakePresets.json
src/editor/: Application.cpp  Application.hpp  CMakeLists.txt  EditorApp.cpp  EditorApp.hpp  UserInterface.cpp  UserInterface.hpp  VulkanContext.hpp  main.cpp
src/editor/componenets/: UIManager.cpp  UIManager.hpp
src/editor/core/: files.hpp  logger.hpp
src/editor/graphics/: Vertex.hpp  VulkanDevice.cpp  VulkanInstance.cpp  VulkanInstance.hpp  Window.cpp  glfw_utils.cpp  glfw_utils.hpp  temp.hpp  vulkan.utils.cpp  vulkan.utils.hpp  vulkan_settings.hpp  vulkan_utils.cpp
src/editor/shaders/: basic.frag  basic.vert  shader.frag  shader.vert
src/editor/ui/: IUndoableCommand.hpp  UndoRedoStack.hpp
src/editor/widgets/: AssetBrowser.cpp  AssetBrowser.hpp  Demo.hpp  LogViewer.cpp  LogViewer.hpp  MenuBar.cpp  MenuBar.hpp  Profiler.cpp  Profiler.hpp  Properties.cpp  Properties.hpp  Settings.cpp  Settings.hpp  ShaderEditor.cpp  ShaderEditor.hpp  Viewport.cpp  Viewport.hpp  Widget.hpp  WorldViewer.cpp  WorldViewer.hpp
src/engine/: CMakeLists.txt  Camera.hpp  Engine.cpp  Engine.hpp  UIManager.cpp  UIManager.hpp  defines.hpp  entry_point.cpp  entry_point.hpp
src/engine/application/: Application.cpp  Application.hpp  CommandLineArgs.cpp  CommandLineArgs.hpp  entry_point.cpp
src/engine/assets/: AssetsManager.hpp  GltfLoader.cpp  GltfLoader.hpp  ObjLoader.cpp  ObjLoader.hpp  ObjModel.hpp  utility.cpp
src/engine/camera/: ArcballCamera.cpp  ArcballCamera.hpp  EditorCamera.hpp  FreeflyCamera.cpp  FreeflyCamera.hpp  camera_utils.cpp  camera_utils.hpp
src/engine/commands/: CommandStack.hpp  ICommand.hpp
src/engine/core/: Camera.hpp  Engine.cpp  Engine.hpp  FileSystem.hpp  Hasher.hpp  Object.cpp  Object.hpp  defines.hpp  entry_point.cpp  logger.hpp
src/engine/ecs/: ComponentSparseSet.hpp  ComponentSparseSetIterator.hpp  Definitions.hpp  Entity.hpp  FamilyId.hpp  Object.cpp  Object.hpp  Query.hpp  QueryIterator.hpp  Registry.hpp  SparseSet.cpp  SparseSet.hpp  SparseSetIterator.hpp  World.cpp  World.hpp
src/engine/events/: Event.hpp  EventDispatcher.hpp  EventHandler.hpp  EventQueue.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
src/engine/gltf/: GltfLoader.cpp  GltfLoader.hpp  utility.cpp  utility.hpp
src/engine/input/: Input.cpp  Input.hpp  KeyCode.hpp  MouseButtonCode.hpp
src/engine/logging/: logger.hpp
src/engine/math/: Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  definitions.hpp  geometric.hpp  transformations.hpp  trigonometric.cpp  trigonometric.hpp
src/engine/memory/: AllocationHeader.hpp  Allocator.cpp  Allocator.hpp  FreeBlock.hpp  FreeListAllocator.cpp  FreeListAllocator.hpp  LinearAllocator.cpp  LinearAllocator.hpp  memory.cpp  memory.hpp
src/engine/profiling/: Profiler.cpp  Profiler.hpp  Stopwatch.cpp  Stopwatch.hpp
src/engine/renderer/: Renderer.cpp  Renderer.hpp
src/engine/rendering/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Renderer2.cpp  Renderer2.hpp  Renderer_definitions.hpp  Renderer_resources.cpp  Renderer_resources.hpp  Renderer_types.hpp  Vertex.hpp  resources.cpp  resources.hpp
src/engine/rhi/: BlendState.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Definitions.hpp  DeletionQueue.cpp  DeletionQueue.hpp  DepthStencilState.cpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  Image.cpp  Image.hpp  InstanceBuilder.cpp  PhysicalDeviceSelector.cpp  Pipeline.cpp  Pipeline.hpp  PipelineState.cpp  PushConstants.cpp  PushConstants.hpp  Queue.cpp  Queue.hpp  RasterizationState.hpp  Sampler.cpp  Sampler.hpp  Semaphore.cpp  Semaphore.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  (+6 more)
src/engine/shaders/: FrameData.glsl  basic.frag  basic.vert  bindless.glsl  common.glsl  common_types.glsl  example.comp  flat_color.frag  font.vert  frame_data.glsl  light_BlinnPhong.glsl  line.vert  mesh.frag  mesh.vert  model_types.glsl  pbrPass.frag  pbrPass.vert  scene_data.glsl  skybox.frag  skybox.vert
src/engine/time/: Timer.cpp  Timer.hpp
src/engine/vulkan/: BlendState.cpp  BlendState.hpp  Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Definitions.hpp  DeletionQueue.cpp  DeletionQueue.hpp  DepthStencilState.cpp  DepthStencilState.hpp  Descriptor.cpp  Descriptor.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorLayoutBuilder.cpp  DescriptorLayoutBuilder.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorWriter.cpp  DescriptorWriter.hpp  Device.cpp  Device.hpp  DeviceBuilder.cpp  DeviceBuilder.hpp  DynamicDescriptorAllocator.cpp  DynamicDescriptorAllocator.hpp  Fence.cpp  Fence.hpp  Handle.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  (+61 more)
src/engine/window/: Window.cpp  Window.hpp  glfw_utils.cpp
tests/: CMakeLists.txt
tests/Frameworks.Tests/: Frameworks.Tests.csproj
tests/Frameworks.Tests/StateManager/: ActionCreatorTest.cs  ActionTypeTest.cs  StoreTest.Extensions.cs  StoreTest.cs
tests/engine/commands/: CommandStackTest.cpp
tests/engine/core/: HasherTest.cpp
tests/engine/ecs/: ComponentSparseSetIteratorTest.cpp  ComponentSparseSetTest.cpp  FamilyIdTest.cpp  QueryTest.cpp  RegistryTest.cpp  SparseSetIteratorTest.cpp  SparseSetTest.cpp  WorldTest.cpp
tests/engine/events/: EventDispatcherTest.cpp  EventQueueTest.cpp  EventTest.cpp  EventTest_types.hpp
tests/engine/math/: GeometricTest.cpp  Matrix3x3Test.cpp  Matrix4x4Test.cpp  QuaternionTest.cpp  TransformationsTest.cpp  TrigonometricTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp
tests/engine/memory/: FreeListAllocatorTest.cpp  LinearAllocatorTest.cpp  (+1 more)
tests/memory/: MemoryTest.cpp
(+353 files in other folders)
